--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,14 @@
 // Variables
 @import 'variables';
 
+* {
+    box-sizing: border-box;
+}
+
+.card {
+    margin-bottom: 50px !important;
+}
+
 .card.card-stats {
     display: flex;
     flex-direction: column;
@@ -17,7 +25,10 @@
     table tr {
         .td-actions {
             text-align: right;
-            width: 100px;
+            width: 60px;
+        }
+        &:hover {
+            background-color: lighten($purple, 35);
         }
     }
 }
@@ -36,4 +47,8 @@
         text-align: center;
         color: #a9afbb;
     }
+}
+
+.nav-link.active {
+    background-color: $orange !important;
 }
